@@ -25,7 +25,7 @@
 		<!-- Properties -->
 		<tag name="resname" value="iron" />
 		<intproperty name="req_strength" value="10" />
-		<intproperty name="speed" value="49" />
+		<intproperty name="speed" value="56" />
 		<intproperty name="mindamage" value="10" />
 		<intproperty name="maxdamage" value="11" />
 	</item>
