@@ -1,0 +1,37 @@
+<?xml version="1.0" encoding="ISO-8859-1"?>
+<!--
+/*=========================================================
+ *   )      (\_     | WOLFPACK 13.0.0 Scripts
+ *  ((    _/{  "-;  | Created by: Incanus
+ *   )).-' {{ ;'`   | Revised by:
+ *  ( (  ;._ \\     | Last modification:
+ *=======================================================*/
+-->
+<definitions>
+
+	<!-- Elven Spellblade -->
+	<item id="2d20">
+		<id>0x2d20</id>
+		<twohanded />
+		<decay />
+		<nodye />
+		<durability><random min="30" max="40" /></durability>
+		<weight>5.0</weight>
+		<basescripts>equipment,blades</basescripts>
+		<type>1005</type>
+		<category>Base Weapons\Fencing\Elven Spellblade (N/S)</category>
+		<!-- Properties -->
+		<tag name="resname" value="iron" />
+		<intproperty name="req_strength" value="35" />
+		<intproperty name="speed" value="44" />
+		<intproperty name="mindamage" value="12" />
+		<intproperty name="maxdamage" value="14" />
+	</item>
+
+	<item id="2d2c" inherit="2d20">
+		<id>0x2d2c</id>
+		<baseid>2d20</baseid>
+		<category>Base Weapons\Fencing\Elven Spellblade (E/W)</category>
+	</item>
+
+</definitions>
