@@ -1,0 +1,37 @@
+<?xml version="1.0" encoding="ISO-8859-1"?>
+<!--
+/*=========================================================
+ *   )      (\_     | WOLFPACK 13.0.0 Scripts
+ *  ((    _/{  "-;  | Created by: Incanus
+ *   )).-' {{ ;'`   | Revised by:
+ *  ( (  ;._ \\     | Last modification:
+ *=======================================================*/
+-->
+<definitions>
+
+	<!-- Leafblade -->
+	<item id="2d22">
+		<id>0x2d22</id>
+		<onehanded />
+		<decay />
+		<nodye />
+		<durability><random min="30" max="39" /></durability>
+		<weight>8.0</weight>
+		<basescripts>equipment,blades</basescripts>
+		<type>1005</type>
+		<category>Base Weapons\Fencing\Leafblade (N/S)</category>
+		<!-- Properties -->
+		<tag name="resname" value="iron" />
+		<intproperty name="req_strength" value="20" />
+		<intproperty name="speed" value="42" />
+		<intproperty name="mindamage" value="13" />
+		<intproperty name="maxdamage" value="15" />
+	</item>
+
+	<item id="2d2e" inherit="2d22">
+		<id>0x2d2e</id>
+		<baseid>2d22</baseid>
+		<category>Base Weapons\Fencing\Leafblade (E/W)</category>
+	</item>
+
+</definitions>
