@@ -1,0 +1,37 @@
+<?xml version="1.0" encoding="ISO-8859-1"?>
+<!--
+/*=========================================================
+ *   )      (\_     | WOLFPACK 13.0.0 Scripts
+ *  ((    _/{  "-;  | Created by: Incanus
+ *   )).-' {{ ;'`   | Revised by:
+ *  ( (  ;._ \\     | Last modification:
+ *=======================================================*/
+-->
+<definitions>
+
+	<!-- War Cleaver -->
+	<item id="2d23">
+		<id>0x2d23</id>
+		<onehanded />
+		<decay />
+		<nodye />
+		<durability><random min="30" max="39" /></durability>
+		<weight>10.0</weight>
+		<basescripts>equipment,blades</basescripts>
+		<type>1005</type>
+		<category>Base Weapons\Fencing\War Cleaver (N/S)</category>
+		<!-- Properties -->
+		<tag name="resname" value="iron" />
+		<intproperty name="req_strength" value="15" />
+		<intproperty name="speed" value="48" />
+		<intproperty name="mindamage" value="9" />
+		<intproperty name="maxdamage" value="11" />
+	</item>
+
+	<item id="2d2f" inherit="2d23">
+		<id>0x2d2f</id>
+		<baseid>2d23</baseid>
+		<category>Base Weapons\Fencing\War Cleaver (E/W)</category>
+	</item>
+
+</definitions>
