@@ -1,0 +1,37 @@
+<?xml version="1.0" encoding="ISO-8859-1"?>
+<!--
+/*=========================================================
+ *   )      (\_     | WOLFPACK 13.0.0 Scripts
+ *  ((    _/{  "-;  | Created by: Incanus
+ *   )).-' {{ ;'`   | Revised by:
+ *  ( (  ;._ \\     | Last modification:
+ *=======================================================*/
+-->
+<definitions>
+
+	<!-- Diamond Mace -->
+	<item id="2d24">
+		<id>0x2d24</id>
+		<onehanded />
+		<decay />
+		<nodye />
+		<durability><random min="30" max="64" /></durability>
+		<weight>10.0</weight>
+		<basescripts>equipment</basescripts>
+		<type>1004</type>
+		<category>Base Weapons\Maces\Diamond Mace (N/S)</category>
+		<!-- Properties -->
+		<tag name="resname" value="iron" />
+		<intproperty name="req_strength" value="35" />
+		<intproperty name="speed" value="37" />
+		<intproperty name="mindamage" value="14" />
+		<intproperty name="maxdamage" value="17" />
+	</item>
+
+	<item id="2d30" inherit="2d24">
+		<id>0x2d30</id>
+		<baseid>2d24</baseid>
+		<category>Base Weapons\Maces\Diamond Mace (E/W)</category>
+	</item>
+
+</definitions>
