@@ -33,7 +33,7 @@
 	<item id="143a" inherit="143b">
 		<id>0x143a</id>
 		<baseid>143b</baseid>
-		<category>Base Weapons\Maces\Mau (E/W)</category>
+		<category>Base Weapons\Maces\Maul (E/W)</category>
 	</item>
 
 </definitions>
