@@ -21,7 +21,7 @@
 		<weight>3.0</weight>
 		<basescripts>equipment,blades</basescripts>
 		<type>1004</type>
-		<category>Base Weapons\Axes\War Axe (N/S)</category>
+		<category>Base Weapons\Maces\War Axe (N/S)</category>
 		<!-- Properties -->
 		<tag name="resname" value="iron" />
 		<intproperty name="req_strength" value="35" />
@@ -33,7 +33,7 @@
 	<item id="13af" inherit="13b0">
 		<id>0x13af</id>
 		<baseid>13b0</baseid>
-		<category>Base Weapons\Axes\War Axe (E/W)</category>
+		<category>Base Weapons\Maces\War Axe (E/W)</category>
 	</item>
 
 </definitions>
