@@ -1,0 +1,37 @@
+<?xml version="1.0" encoding="ISO-8859-1"?>
+<!--
+/*=========================================================
+ *   )      (\_     | WOLFPACK 13.0.0 Scripts
+ *  ((    _/{  "-;  | Created by: Incanus
+ *   )).-' {{ ;'`   | Revised by:
+ *  ( (  ;._ \\     | Last modification:
+ *=======================================================*/
+-->
+<definitions>
+
+	<!-- Elven Machete -->
+	<item id="2d29">
+		<id>0x2d29</id>
+		<onehanded />
+		<decay />
+		<nodye />
+		<durability><random min="30" max="55" /></durability>
+		<weight>6.0</weight>
+		<type>1001</type>
+		<basescripts>equipment,blades</basescripts>
+		<category>Base Weapons\Swordsmanship\Elven Machete (N/S)</category>
+		<!-- Properties -->
+		<tag name="resname" value="iron" />
+		<intproperty name="req_strength" value="20" />
+		<intproperty name="speed" value="41" />
+		<intproperty name="mindamage" value="13" />
+		<intproperty name="maxdamage" value="15" />
+	</item>
+
+	<item id="2d35" inherit="2d29">
+		<id>0x2d35</id>
+		<baseid>2d29</baseid>
+		<category>Base Weapons\Swordsmanship\Elven Machete (E/W)</category>
+	</item>
+
+</definitions>
